# try-pixi

./: README.md  pyproject.toml  test_gpu.py
